@@ -1,37 +1,41 @@
 package tpo.uade.api.service.implementation;
 
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
+
 import org.springframework.stereotype.Service;
-import tpo.uade.api.config.JwtService;
+
 import tpo.uade.api.dto.UserMyProfileDto;
 import tpo.uade.api.dto.OrderDto;
 import tpo.uade.api.mapper.OrderMapper;
 import tpo.uade.api.mapper.UserMyProfileMapper;
+import tpo.uade.api.model.UserModel;
 import tpo.uade.api.repository.OrderRepository;
-import tpo.uade.api.repository.UserRepository;
 import tpo.uade.api.service.IMyProfileService;
 
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
-@AllArgsConstructor
 public class MyProfileService implements IMyProfileService {
-    private UserRepository userRepository;
+
+    private UserService userService;
     private OrderRepository orderRepository;
     private UserMyProfileMapper userMapper;
     private OrderMapper orderMapper;
-    private JwtService jwtService;
 
-    public UserMyProfileDto getUser(String token){
-        var username = jwtService.extractUsername(token);
-        return userMapper.toDto(userRepository.findByUsername(username).orElseThrow(() -> new NoSuchElementException("user doesn't exist")));
+    @Override
+    public UserMyProfileDto getUserWithOrders() {
+        UserModel user = userService.getUserModelByUsername();
+        List<OrderDto> orderList = getUserOrders(user.getUserId());
+        UserMyProfileDto userMyProfile = userMapper.toDto(user);
+        userMyProfile.setOrdersDto(orderList);
+        return userMyProfile;
     }
 
-    public List<OrderDto> getOrders(String token){
-        var user = userRepository.findByUsername(jwtService.extractUsername(token)).orElseThrow((() -> new NoSuchElementException("user doesn't exist")));
-        return orderRepository.findByUser_UserId(user.getUserId()).stream().map(orderMapper::toDto).collect(Collectors.toList());
+    @Override
+    public List<OrderDto> getUserOrders(Long id) {
+        return orderRepository.findByUser_UserId(id).stream()
+                .map(orderMapper::toDto)
+                .toList();
     }
-
 }
